--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mobx": "^6.5.0",
     "mobx-react": "^7.3.0",
     "node-sass": "^7.0.1",
+    "nprogress": "^0.2.0",
     "prettier": "^2.6.1",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
