--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 BROWSER=none
-REACT_APP_PUBLIC_API_URL = "https://api.digstack.ml/api"
+# REACT_APP_PUBLIC_API_URL = "https://api.digstack.ml/api"
+REACT_APP_PUBLIC_API_URL = "http://localhost:8000/api"
