--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-i18next": "^11.16.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-tooltip": "^4.2.21",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
